🔨 Add sass script and create template

--- a/SCSS/styles.scss
+++ b/SCSS/styles.scss
@@ -1,3 +1,9 @@
-div {
-  color: red;
-}
+@import 'abstracts/variables'; // 변수
+@import 'abstracts/mixins'; // 믹스인
+
+@import 'base/reset'; // 리셋, 노멀라이즈css
+@import 'base/typography'; // 폰트정의
+
+
+@import 'layout/header'; // 헤더
+@import 'layout/footer'; // 푸터
