--- a/SCSS/base/_typography.scss
+++ b/SCSS/base/_typography.scss
@@ -7,3 +7,10 @@ body {
 
 html {font-size: 62.5%;}
 body {font-size: 1rem;}
+
+.h1 {
+  color: $black06;
+  font-size: rem(18);
+  font-weight: 500;
+  line-height: rem(29);
+}
