--- a/SCSS/styles.scss
+++ b/SCSS/styles.scss
@@ -6,6 +6,7 @@
 @import 'base/typography'; // 폰트정의
 
 @import 'component/button'; // 버튼
+@import 'component/gnb'; // GNB
 
 @import 'layout/align'; // 정렬
 @import 'layout/header'; // 헤더
