--- a/SCSS/abstracts/_variables.scss
+++ b/SCSS/abstracts/_variables.scss
@@ -1,6 +1,11 @@
+// 색상
 $black06:#060606;
 $black:#000;
 $white:#fff;
 $red: #ff3d45;
 $grey06: #060606;
 $grey83: #838a93;
+
+// 이미지 경로
+$imgurl:'../images/';
+
