💄 Declare color constants

--- a/SCSS/abstracts/_variables.scss
+++ b/SCSS/abstracts/_variables.scss
@@ -3,8 +3,11 @@ $black06:#060606;
 $black:#000;
 $white:#fff;
 $red: #ff3d45;
+$purple: #bb6bd9;
 $grey06: #060606;
+$grey55: #555d67;
 $grey83: #838a93;
+$greye5: #e5e8f0;
 
 // 이미지 경로
 $imgurl:'../images/';
