--- a/SCSS/styles.scss
+++ b/SCSS/styles.scss
@@ -7,6 +7,7 @@
 
 @import 'component/button'; // 버튼
 @import 'component/gnb'; // GNB
+@import 'component/tab'; // 탭
 
 @import 'layout/align'; // 정렬
 @import 'layout/header'; // 헤더
