💄 Add color constant

--- a/SCSS/abstracts/_variables.scss
+++ b/SCSS/abstracts/_variables.scss
@@ -5,6 +5,7 @@ $white:#fff;
 $red: #ff3d45;
 $purple: #bb6bd9;
 $grey06: #060606;
+$grey1e: #1e2530;
 $grey55: #555d67;
 $grey83: #838a93;
 $greye5: #e5e8f0;
