💄 Declare typography title type constant

--- a/SCSS/base/_typography.scss
+++ b/SCSS/base/_typography.scss
@@ -14,3 +14,31 @@ body {font-size: 1rem;}
   font-weight: 500;
   line-height: rem(29);
 }
+
+.h2 {
+  color: $grey1e;
+  font-size: rem(18);
+  font-weight: 700;
+  line-height: rem(29);
+
+  &-2 {
+    color: $grey1e;
+    font-size: rem(18);
+    font-weight: 400;
+    line-height: rem(29);
+  }
+
+  &-3 {
+    color: $grey1e;
+    font-size: rem(22);
+    font-weight: 700;
+    line-height: rem(30);
+  }
+}
+
+.h3 {
+  color: $grey1e;
+  font-size: rem(15);
+  font-weight: 700;
+  line-height: rem(23);
+}
