--- a/SCSS/styles.scss
+++ b/SCSS/styles.scss
@@ -8,6 +8,7 @@
 @import 'component/button'; // 버튼
 @import 'component/gnb'; // GNB
 @import 'component/tab'; // 탭
+@import 'component/shop'; // 상품관련
 
 @import 'layout/align'; // 정렬
 @import 'layout/header'; // 헤더
