--- a/SCSS/abstracts/_variables.scss
+++ b/SCSS/abstracts/_variables.scss
@@ -10,7 +10,14 @@ $grey55: #555d67;
 $grey83: #838a93;
 $greyd6: #d6d9e1;
 $greye5: #e5e8f0;
+$greyf6: #f6f6f6;
 
 // 이미지 경로
 $imgurl:'../images/';
 
+// Badge
+// 순서:클래스명,좌우여백,모서리둥근,높이,폰트크기,폰트색상,선색상,배경색
+$badgesetting:
+  'black' 4 3 20 13 $white $grey1e $grey1e,
+  'purple' 20 8 20 13 $white $purple $purple,
+  'grey' 4 3 18 11 $grey1e $greye5 $greye5;
