--- a/SCSS/component/_button.scss
+++ b/SCSS/component/_button.scss
@@ -28,6 +28,16 @@
       line-height: rem(16);
       padding: 0 rem(6);
     }
+
+    .shop-list & {
+      height: rem(20);
+      width: rem(20);
+    }
   }
 
+  &-like {
+    @include bg('ico_like.svg', center);
+    height: rem(20);
+    width: rem(20);
+  }
 }
