--- a/SCSS/styles.scss
+++ b/SCSS/styles.scss
@@ -9,6 +9,7 @@
 @import 'component/gnb'; // GNB
 @import 'component/tab'; // 탭
 @import 'component/shop'; // 상품관련
+@import 'component/badge'; // 뱃지
 
 @import 'layout/align'; // 정렬
 @import 'layout/header'; // 헤더
