✨ Implement a new mixins : buttonsetting

--- a/SCSS/abstracts/_mixins.scss
+++ b/SCSS/abstracts/_mixins.scss
@@ -32,6 +32,20 @@
   }
 }
 
+// Button
+//순서:클래스명,모서리둥근,높이,폰트크기,폰폰색상,선색상,배경색
+@each $class,$br,$pad,$hig,$fs,$color,$bordercolor,$bg in $buttonsetting {
+  .btn.#{$class} {
+    background-color: $bg;
+    border: 1px solid $bordercolor;
+    border-radius: rem($br);
+    color: $color;
+    font-size: rem($fs);
+    height: rem($hig);
+    padding: 0 rem($pad);
+  }
+}
+
 // IR
 @mixin hide {
   border: 0;
