💄 Style four types of input forms: text, radio, checkbox, spinner

--- a/SCSS/styles.scss
+++ b/SCSS/styles.scss
@@ -10,8 +10,10 @@
 @import 'component/tab'; // 탭
 @import 'component/shop'; // 상품관련
 @import 'component/badge'; // 뱃지
+@import 'component/form'; // 온라인 서식
 
 @import 'layout/align'; // 정렬
 @import 'layout/header'; // 헤더
+@import 'layout/space'; // 여백
 @import 'layout/footer'; // 푸터
 @import 'layout/guide'; // 가이드
