--- a/SCSS/styles.scss
+++ b/SCSS/styles.scss
@@ -11,6 +11,7 @@
 @import 'component/shop'; // 상품관련
 @import 'component/badge'; // 뱃지
 @import 'component/form'; // 온라인 서식
+@import 'component/empty'; // 빈콘텐츠
 
 @import 'layout/align'; // 정렬
 @import 'layout/header'; // 헤더
