--- a/SCSS/layout/_align.scss
+++ b/SCSS/layout/_align.scss
@@ -17,3 +17,15 @@
     align-items: center;
   }
 }
+
+.bottom-fix {
+  bottom: 0;
+  left: 0;
+  padding: rem(8) rem(16);
+  position: fixed;
+  right: 0;
+
+  .btn {
+    width: 100%;
+  }
+}
