--- a/SCSS/component/_empty.scss
+++ b/SCSS/component/_empty.scss
@@ -8,6 +8,11 @@
     text-align: center;
   }
 
+  &.height-type2 {
+    height: calc(100vh - rem(123));
+    position: relative;
+  }
+
   &__img {
     &1 {
       @include empty(80, 90, ico_empty1);
@@ -15,6 +20,10 @@
 
     &2 {
       @include empty(99, 96, ico_empty2);
+      left: 50%;
+      position: absolute;
+      top: 50%;
+      transform: translate(-50%, -50%);
     }
   }
 
@@ -23,6 +32,25 @@
       color: $grey55;
       font-size: rem(18);
       line-height: rem(29);
+    }
+
+    b {
+      color: $greya5;
+      display: block;
+      font-size: rem(15);
+      line-height: rem(23);
+      padding: rem(4) 0 0;
+    }
+  }
+
+  &__text:first-child {
+    padding: rem(16);
+
+    p {
+      color: $grey1e;
+      font-size: rem(22);
+      font-weight: 700;
+      line-height: rem(30);
     }
 
     b {
