--- a/SCSS/abstracts/_variables.scss
+++ b/SCSS/abstracts/_variables.scss
@@ -5,6 +5,7 @@ $white:#fff;
 $red: #ff3d45;
 $purple: #bb6bd9;
 $skyblue: #56ccf2;
+$green: #219653;
 $grey06: #060606;
 $grey1e: #1e2530;
 $grey55: #555d67;
@@ -12,6 +13,7 @@ $grey83: #838a93;
 $greya5: #a5acb8;
 $greyd6: #d6d9e1;
 $greye5: #e5e8f0;
+$greyf1: #f1f3f7;
 $greyf4: #f4f5fb;
 $greyf6: #f6f6f6;
 
