💄 Style the toggle-box of style guide page

--- a/SCSS/styles.scss
+++ b/SCSS/styles.scss
@@ -12,6 +12,7 @@
 @import 'component/badge'; // 뱃지
 @import 'component/form'; // 온라인 서식
 @import 'component/empty'; // 빈콘텐츠
+@import 'component/toggle'; // 토글 콘텐츠
 
 @import 'layout/align'; // 정렬
 @import 'layout/header'; // 헤더
