💄 Style the payment page related to parcel-info

--- a/SCSS/styles.scss
+++ b/SCSS/styles.scss
@@ -18,4 +18,5 @@
 @import 'layout/header'; // 헤더
 @import 'layout/space'; // 여백
 @import 'layout/footer'; // 푸터
+@import 'layout/sub'; // 서브페이지
 @import 'layout/guide'; // 가이드
