✨ Implement a new mixin for single-line ellipsis and apply it to the title

--- a/SCSS/abstracts/_mixins.scss
+++ b/SCSS/abstracts/_mixins.scss
@@ -65,3 +65,11 @@
   height: rem($height);
   @include bg(#{$img} + '.svg', center);
 }
+
+// 한줄말줄임표
+@mixin ellipsis {
+  width: 100%;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
