--- a/SCSS/component/_button.scss
+++ b/SCSS/component/_button.scss
@@ -56,4 +56,14 @@
     height: rem(40);
     width: rem(40);
   }
+
+  &-arrow {
+    @include bg('btn_arrow.svg', right, center);
+    color: $grey55;
+    display: flex;
+    font-size: rem(13);
+    font-weight: 500;
+    line-height: rem(18);
+    padding: 0 rem(17) 0 0;
+  }
 }
